# workflows.ai

./: .gitignore  .gitmodules  README.md  pyproject.toml
nix/: flake.nix  shell.nix
project_docs/: example-milestone-list.md  example-prd.md  milestones.md  prd.md  requirements.md  tasks-list.md  techstack.md
project_docs/tasklists/: 1-cli-for-user-input-tasklist.md  1-initial-setup-workflow-definition-tasklist.md  2-gemini-api-integration-tasklist.md  2-workflow-parser-implementation-tasklist.md  3-core-workflow-as-langgraph-tasklist.md  3-llm-caller-implementation-tasklist.md  4-output-storage-implementation-tasklist.md  4-response-handling-and-output-tasklist.md  5-basic-server-implementation-tasklist.md  5-cli-trigger-tasklist.md  example-task-list.md
project_docs/workflows/: example_workflow.md
research/: MCP_capabilities.md  MCP_signals.md  agent_tool_use.md  fast_mcp.md  firecrawl_quick_ref.md  langgraph.md  mcp.md  multi_agent_systems.md  passing_context.md
rules/: classes.mdc  config.mdc  documents-generate-prd.mdc  documents-generate-tasklists.mdc  documents-generate-techstack.mdc  documents-process-task-list.mdc  functions.mdc  integration_tests.mdc  scripts.mdc  services.mdc  tasks.mdc  workflows.mdc
scripts/: init_gitmodules.sh  init_pydependancies.sh  init_uv.sh  init_wsl2.sh  scripts_manifest.md
services/example_service/: Dockerfile.example  example_entrypoint.sh
tests/: example_test_integration.py  example_test_integration.sh  example_test_unit.py  example_test_unit.sh  test_integration_workflow_parser.py  test_integration_workflow_parser.sh
(+8 files in other folders)
